# etl-pipeline-bitcoin

./: README.md  bitcoin_json  pipeline_01.py  pyproject.toml
src/: pipeline00.py  pipeline01.py
